{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 816,
  "lineage": "3db259d4-3b74-cb7a-d53e-a027229f4d10",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:loadbalancer/app/example-alb/a34e928505b81ada",
            "arn_suffix": "app/example-alb/a34e928505b81ada",
            "dns_name": "example-alb-1965886011.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:loadbalancer/app/example-alb/a34e928505b81ada",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-alb",
            "security_groups": [
              "sg-0603c645ce4cf5f89"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-098e5944eb1fcd880"
              },
              {
                "subnet_id": "subnet-0e64ba529cf16c9e5"
              }
            ],
            "subnets": [
              "subnet-098e5944eb1fcd880",
              "subnet-0e64ba529cf16c9e5"
            ],
            "vpc_id": "vpc-049e9e58a4faa1af3",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_s3_bucket.alb_log",
            "aws_security_group.web-instance-sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:listener/app/example-alb/a34e928505b81ada/9419a9a7afe9f9f0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:targetgroup/alb-example-tg/67b92e59eb310718",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:listener/app/example-alb/a34e928505b81ada/9419a9a7afe9f9f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:loadbalancer/app/example-alb/a34e928505b81ada",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb",
            "aws_s3_bucket.alb_log",
            "aws_security_group.web-instance-sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_443",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:listener/app/example-alb/a34e928505b81ada/b51ac9a0a8a16ec3",
            "certificate_arn": "arn:aws:acm:ap-northeast-1:460256653427:certificate/70809e2e-b5ca-4aee-a162-c6d6a69cf1d9",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:targetgroup/alb-example-tg/67b92e59eb310718",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:listener/app/example-alb/a34e928505b81ada/b51ac9a0a8a16ec3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:loadbalancer/app/example-alb/a34e928505b81ada",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2015-05",
            "timeouts": null
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_alb_target_group.alb",
            "aws_s3_bucket.alb_log",
            "aws_security_group.web-instance-sg",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:targetgroup/alb-example-tg/67b92e59eb310718",
            "arn_suffix": "targetgroup/alb-example-tg/67b92e59eb310718",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 20,
                "unhealthy_threshold": 4
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:460256653427:targetgroup/alb-example-tg/67b92e59eb310718",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "alb-example-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example-vpc-ig",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:internet-gateway/igw-026b1068b1662a7aa",
            "id": "igw-026b1068b1662a7aa",
            "owner_id": "460256653427",
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ffa41dcf37255270",
            "owner_id": "460256653427",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026b1068b1662a7aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_internet_gateway.example-vpc-ig",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03edadac5c059c316",
            "route_table_id": "rtb-0ffa41dcf37255270",
            "subnet_id": "subnet-098e5944eb1fcd880"
          },
          "dependencies": [
            "aws_internet_gateway.example-vpc-ig",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f87aceac500c4ddc",
            "route_table_id": "rtb-0ffa41dcf37255270",
            "subnet_id": "subnet-0e64ba529cf16c9e5"
          },
          "dependencies": [
            "aws_internet_gateway.example-vpc-ig",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-instance-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:security-group/sg-0603c645ce4cf5f89",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0603c645ce4cf5f89",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-instance-sg",
            "name_prefix": null,
            "owner_id": "460256653427",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:subnet/subnet-098e5944eb1fcd880",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-098e5944eb1fcd880",
            "map_public_ip_on_launch": false,
            "owner_id": "460256653427",
            "tags": {
              "Name": "public-a"
            },
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:subnet/subnet-0e64ba529cf16c9e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0e64ba529cf16c9e5",
            "map_public_ip_on_launch": false,
            "owner_id": "460256653427",
            "tags": {
              "Name": "public-c"
            },
            "vpc_id": "vpc-049e9e58a4faa1af3"
          },
          "dependencies": [
            "aws_vpc.example-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:460256653427:vpc/vpc-049e9e58a4faa1af3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06e3bd2b651a2bc2c",
            "default_route_table_id": "rtb-004839555eb0cd420",
            "default_security_group_id": "sg-09802de28308b3de2",
            "dhcp_options_id": "dopt-029e59b706aa58c0e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-049e9e58a4faa1af3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-004839555eb0cd420",
            "owner_id": "460256653427",
            "tags": {
              "Name": "example-vpc"
            }
          }
        }
      ]
    }
  ]
}